--- a/superChat/package.json
+++ b/superChat/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/ngquydat/trainingWebDevelop#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.1",
     "nodemon": "^1.18.9",
